@@ -48,11 +48,11 @@ public class WrappedSoundEntry extends SoundEntry {
 
     @Override
     public SoundEvent getMainEvent() {
-        return compiledEvents.get(0).event();
+        return compiledEvents.getFirst().event();
     }
 
     protected ResourceLocation getIdOf(int i) {
-        return ResourceLocation.fromNamespaceAndPath(id.getNamespace(), i == 0 ? id.getPath() : id.getPath() + "_compounded_" + i);
+        return id.withPath(path -> i == 0 ? path : path + "_compounded_" + i);
     }
 
     @Override
